--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
                 <div class="local">
                     <div>
-                        <img src="/Font_awesome/map-marker-alt.svg" alt="Icone de localisation restaurant Ohmyfood" class="ico--local">
+                        <img src="Font_awesome/map-marker-alt.svg" alt="Icone de localisation restaurant Ohmyfood" class="ico--local">
                     </div>
                     <div class="a text--local">Paris, Belleville</div>
                 </div>
@@ -51,21 +51,21 @@
                 <li class="fonction__li fonction__li__first li">
                     <div class="fonction__li__num">1</div>
                     <div class="fonction__li__div">
-                        <img class="ico--fonction tel" src="/Font_awesome/mobile-alt.svg" alt="Icone de telephone Ohmyfood"/>
+                        <img class="ico--fonction tel" src="Font_awesome/mobile-alt.svg" alt="Icone de telephone Ohmyfood"/>
                     </div>
                     <a href="" class="fonction__li__a a a--fonction">Choisissez un restaurant</a>
                 </li>
                 <li class="fonction__li li">
                     <div class="fonction__li__num">2</div>
                     <div class="fonction__li__div">
-                        <img class="ico--fonction list" src="/Font_awesome/list-ul.svg" alt="Icone de liste Ohmyfood"/>
+                        <img class="ico--fonction list" src="Font_awesome/list-ul.svg" alt="Icone de liste Ohmyfood"/>
                     </div>
                     <a href="" class="fonction__li__a a a--fonction">Composez votre menu</a>
                 </li>
                 <li class="fonction__li li">
                     <div class="fonction__li__num">3</div>
                     <div class="fonction__li__div">
-                        <img class="ico--fonction store" src="/Font_awesome/store.svg" alt="Icone de restaurant Ohmyfood"/>
+                        <img class="ico--fonction store" src="Font_awesome/store.svg" alt="Icone de restaurant Ohmyfood"/>
                     </div>
                     <a href="" class="fonction__li__a a a--fonction">Dégustez au restaurant</a>
                 </li>
@@ -133,11 +133,11 @@
         <nav class="footer__nav">
             <ul class="footer__ul">
                 <li class="footer__li li">
-                    <div><img class="ico--footer ico--footer--1" src="/Font_awesome/utensils.svg" alt="Icone de couverts de restaurant Ohmyfood"/></div>
+                    <div><img class="ico--footer ico--footer--1" src="Font_awesome/utensils.svg" alt="Icone de couverts de restaurant Ohmyfood"/></div>
                     <a href="#" class="footer__li__a a">Proposer un restaurant</a>
                 </li>
                 <li class="footer__li li">
-                    <div><img class="ico--footer ico--footer--2" src="/Font_awesome/hands-helping.svg" alt="Poignée de mains Ohmyfood"/></div>
+                    <div><img class="ico--footer ico--footer--2" src="Font_awesome/hands-helping.svg" alt="Poignée de mains Ohmyfood"/></div>
                     <a href="#" class="footer__li__a a">Devenir partenaire</a>
                 </li>
                 <li class="footer__li li ">
