--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -33,7 +33,7 @@
         
  <!-- SECTION MAIN--PALETTE/ PLATPHOTO-->     
         <section class="platphoto">
-            <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat sur assiette du restaurant La note enchantée pour commande repas Ohmyfood" class="platphoto__img platphoto__img--note">
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat sur assiette du restaurant La note enchantée pour commande repas Ohmyfood" class="platphoto__img platphoto__img--note">
         </section>
 
 <!-- SECTION MAIN--PALETTE/ COMMANDE--> 
@@ -204,11 +204,11 @@
         <nav class="footer__nav">
             <ul class="footer__ul">
                 <li class="footer__li li">
-                    <div><img class="ico--footer ico--footer--1" src="/Font_awesome/utensils.svg" alt="Icone de couverts de restaurant Ohmyfood"/></div>
+                    <div><img class="ico--footer ico--footer--1" src="Font_awesome/utensils.svg" alt="Icone de couverts de restaurant Ohmyfood"/></div>
                     <a href="#" class="footer__li__a a">Proposer un restaurant</a>
                 </li>
                 <li class="footer__li li">
-                    <div><img class="ico--footer ico--footer--2" src="/Font_awesome/hands-helping.svg" alt="Poignée de mains Ohmyfood"/></div>
+                    <div><img class="ico--footer ico--footer--2" src="Font_awesome/hands-helping.svg" alt="Poignée de mains Ohmyfood"/></div>
                     <a href="#" class="footer__li__a a">Devenir partenaire</a>
                 </li>
                 <li class="footer__li li ">
