--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -33,7 +33,7 @@
 
 <!-- SECTION MAIN--PALETTE/ PLATPHOTO-->         
         <section class="platphoto">
-            <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat sur assiette du restaurant Le délice des sens pour commande repas Ohmyfood" class="platphoto__img">
+            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat sur assiette du restaurant Le délice des sens pour commande repas Ohmyfood" class="platphoto__img">
         </section>
 
 <!-- SECTION MAIN--PALETTE/ COMMANDE-->         
@@ -187,11 +187,11 @@
         <nav class="footer__nav">
             <ul class="footer__ul">
                 <li class="footer__li li">
-                    <div><img class="ico--footer ico--footer--1" src="/Font_awesome/utensils.svg" alt="Icone de couverts de restaurant Ohmyfood"/></div>
+                    <div><img class="ico--footer ico--footer--1" src="Font_awesome/utensils.svg" alt="Icone de couverts de restaurant Ohmyfood"/></div>
                     <a href="#" class="footer__li__a a">Proposer un restaurant</a>
                 </li>
                 <li class="footer__li li">
-                    <div><img class="ico--footer ico--footer--2" src="/Font_awesome/hands-helping.svg" alt="Poignée de mains Ohmyfood"/></div>
+                    <div><img class="ico--footer ico--footer--2" src="Font_awesome/hands-helping.svg" alt="Poignée de mains Ohmyfood"/></div>
                     <a href="#" class="footer__li__a a">Devenir partenaire</a>
                 </li>
                 <li class="footer__li li ">
