--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -39,7 +39,7 @@
 <!-- SECTION MAIN--PALETTE/ COMMANDE-->       
         <section class="commande">
             <h1 class="heading heading--h1 heading--h1--commande">À la française</h1>
-            <div class="commande__divico"><i class="far fa-heart"></i></div>
+            <div class="commande__divico"><img src="Font_awesome/heart.svg" alt="Icone de like du restaurant A la française sur Ohmyfood" class="commande__divico__ico"></div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->            
                 <div class="carte carte-entrees">
@@ -47,7 +47,7 @@
                     <ul class="commande__ul">
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Tartare de poulpe acidulé</h3>
-                            <p class="text text--commande">Aux zestes d'orange</p>  
+                            <div class="text text--commande commande__li__detail">Aux zestes d'orange</p>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">25€</div>
                             </div>
@@ -60,9 +60,8 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Velouté de légumes d'antan</h3>
-                            <p class="text text--commande">Carotte, panais, topinambour</p>  
+                            <div class="text text--commande commande__li__detail">Carotte, panais, topinambour</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
@@ -74,7 +73,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Soupe à l'oignon</h3>
-                            <p class="text text--commande">Revisitée</p>  
+                            <div class="text text--commande commande__li__detail">Revisitée</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">20€</div>
                             </div>
@@ -93,9 +92,8 @@
                     <ul class="commande__ul">
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Coquilles Saint-Jacques</h3>
-                            <p class="text text--commande">Accompagnées d'une purée de panais</p>  
+                            <div class="text text--commande commande__li__detail">Accompagnées d'une purée de panais</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">40€</div>
                             </div>
                             <div class="commande__li__right">
@@ -107,9 +105,8 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Magret de canard</h3>
-                            <p class="text text--commande">Et parmentier de pommes de terre</p>  
+                            <div class="text text--commande commande__li__detail">Et parmentier de pommes de terre</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
@@ -121,9 +118,8 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p class="text text--commande">Sur son lit de gnocchis aux légumes</p>  
+                            <div class="text text--commande commande__li__detail">Sur son lit de gnocchis aux légumes</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">44€</div>
                             </div>
                             <div class="commande__li__right">
@@ -141,7 +137,7 @@
                     <ul class="commande__ul">
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Pétales de violettes glacés</h3>
-                            <p class="text text--commande">Et purée de noisettes</p>  
+                            <div class="text text--commande commande__li__detail">Et purée de noisettes</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">18€</div>
                             </div>
@@ -154,7 +150,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Fondant au chocolat</h3>
-                            <p class="text text--commande">Revisité</p>  
+                            <div class="text text--commande commande__li__detail">Revisité</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">22€</div>
                             </div>
@@ -167,7 +163,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Millefeuille croustillant</h3>
-                            <p class="text text--commande">Myrtilles et pâte d’amande</p>  
+                            <div class="text text--commande commande__li__detail">Myrtilles et pâte d’amande</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">23€</div>
                             </div>
