--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -39,7 +39,7 @@
 <!-- SECTION MAIN--PALETTE/ COMMANDE--> 
         <section class="commande">
             <h1 class="heading heading--h1 heading--h1--commande">La note enchantée</h1>
-            <div class="commande__divico"><i class="far fa-heart"></i></div>
+            <div class="commande__divico"><img src="Font_awesome/heart.svg" alt="Icone de like du restaurant La note enchantée sur Ohmyfood" class="commande__divico__ico"></div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE--> 
                 <div class="carte carte-entrees">
@@ -47,9 +47,8 @@
                     <ul class="commande__ul">
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Ravioles de foie gras </h3>
-                            <p class="text text--commande">Accompagnés de leur crème à la truffe</p>  
+                            <div class="text text--commande commande__li__detail">Accompagnés de leur crème à la truffe</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">25€</div>
                             </div>
                             <div class="commande__li__right">
@@ -61,9 +60,8 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Caviar osciètre</h3>
-                            <p class="text text--commande">Sur blini à la farine de blé noir</p>  
+                            <div class="text text--commande commande__li__detail">Sur blini à la farine de blé noir</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
@@ -75,7 +73,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Homard et espuma de potiron</h3>
-                            <p class="text text--commande">Mariné aux zestes d'orange</p>  
+                            <div class="text text--commande commande__li__detail">Mariné aux zestes d'orange</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">20€</div>
                             </div>
@@ -87,9 +85,8 @@
                         </li>
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Foie gras de canard cuit entier</h3>
-                            <p class="text text--commande">Confiture de figue et pain toasté</p>  
+                            <div class="text text--commande commande__li__detail">Confiture de figue et pain toasté</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
@@ -107,9 +104,8 @@
                     <ul class="commande__ul">
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Noix de coquilles Saint-Jacques</h3>
-                            <p class="text text--commande">Sur lit de purée de céleri-rave</p>  
+                            <div class="text text--commande commande__li__detail">Sur lit de purée de céleri-rave</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">40€</div>
                             </div>
                             <div class="commande__li__right">
@@ -121,7 +117,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Langoustine poêlée</h3>
-                            <p class="text text--commande">Purée de patate douce</p>  
+                            <div class="text text--commande commande__li__detail">Purée de patate douce</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
@@ -134,9 +130,8 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Mijoté de queue de boeuf</h3>
-                            <p class="text text--commande">Et riz sauvage aux zestes de citron</p>  
+                            <div class="text text--commande commande__li__detail">Et riz sauvage aux zestes de citron</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">44€</div>
                             </div>
                             <div class="commande__li__right">
@@ -154,9 +149,8 @@
                     <ul class="commande__ul">
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Macaron noisette et chocola</h3>
-                            <p class="text text--commande">Glace au caramel brun et sel de Guérande</p>  
+                            <div class="text text--commande commande__li__detail">Glace au caramel brun et sel de Guérande</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">18€</div>
                             </div>
                             <div class="commande__li__right">
@@ -168,7 +162,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Baba au rhum revisité</h3>
-                            <p class="text text--commande">Avec son coulis de citron</p>  
+                            <div class="text text--commande commande__li__detail">Avec son coulis de citron</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">22€</div>
                             </div>
@@ -181,7 +175,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Tarte au citron meringuée</h3>
-                            <p class="text text--commande">Déstructurée</p>  
+                            <div class="text text--commande commande__li__detail">Déstructurée</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">23€</div>
                             </div>
