--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -39,7 +39,7 @@
 <!-- SECTION MAIN--PALETTE/ COMMANDE-->         
         <section class="commande">
             <h1 class="heading heading--h1 heading--h1--commande">La palette du goût</h1>
-            <div class="commande__divico"><i class="far fa-heart"></i></div>
+            <div class="commande__divico"><img src="Font_awesome/heart.svg" alt="Icone de like du restaurant La palette du goût sur Ohmyfood" class="commande__divico__ico"></div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->             
                 <div class="carte carte-entrees">
@@ -47,7 +47,7 @@
                     <ul class="commande__ul">
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Fricassée d'escargot</h3>
-                            <p class="text text--commande">Au piment d'espelette</p>  
+                            <div class="text text--commande commande__li__detail">Au piment d'espelette</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">25€</div>
                             </div>
@@ -60,7 +60,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Foie gras de canard mi-cuit</h3>
-                            <p class="text text--commande">Et ses copeaux de truffe noire</p>  
+                            <div class="text text--commande commande__li__detail">Et ses copeaux de truffe noire</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
@@ -73,9 +73,8 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Oeuf au plat</h3>
-                            <p class="text text--commande">Assaisonné à la truffe sur lit de caviar</p>  
+                            <div class="text text--commande commande__li__detail">Assaisonné à la truffe sur lit de caviar</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">20€</div>
                             </div>
                             <div class="commande__li__right">
@@ -93,9 +92,8 @@
                     <ul class="commande__ul">
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Filet de boeuf aux herbes</h3>
-                            <p class="text text--commande">Accompagné de sa ribambelle de légumes</p>  
+                            <div class="text text--commande commande__li__detail">Accompagné de sa ribambelle de légumes</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points commande__li__center__points--opa">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">40€</div>
                             </div>
                             <div class="commande__li__right">
@@ -107,9 +105,8 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Parmentier de queue de boeuf</h3>
-                            <p class="text text--commande">À la truffe noire sur sa purée de panais</p>  
+                            <div class="text text--commande commande__li__detail">À la truffe noire sur sa purée de panais</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
@@ -121,7 +118,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Filet de Turbot</h3>
-                            <p class="text text--commande">Aux agrumes</p>  
+                            <div class="text text--commande commande__li__detail">Aux agrumes</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">44€</div>
                             </div>
@@ -140,7 +137,7 @@
                     <ul class="commande__ul">
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Paris-Brest</h3>
-                            <p class="text text--commande">Revisité</p>  
+                            <div class="text text--commande commande__li__detail">Revisité</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">18€</div>
                             </div>
@@ -153,9 +150,8 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Macaron au chocolat d'exception</h3>
-                            <p class="text text--commande">Et glace à la vanille de Madagascar</p>  
+                            <div class="text text--commande commande__li__detail">Et glace à la vanille de Madagascar</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">22€</div>
                             </div>
                             <div class="commande__li__right">
@@ -167,9 +163,8 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Mousse au chocolat</h3>
-                            <p class="text text--commande">Au piment d'Espelette et à la truffe noire</p>  
+                            <div class="text text--commande commande__li__detail">Au piment d'Espelette et à la truffe noire</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">23€</div>
                             </div>
                             <div class="commande__li__right">
