--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -39,7 +39,7 @@
 <!-- SECTION MAIN--PALETTE/ COMMANDE-->         
         <section class="commande">
             <h1 class="heading heading--h1 heading--h1--commande">Le délice des sens</h1>
-            <div class="commande__divico"><i class="far fa-heart"></i></div>
+            <div class="commande__divico"><img src="Font_awesome/heart.svg" alt="Icone de like du restaurant Le délice des sens sur Ohmyfood" class="commande__divico__ico"></div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->            
                 <div class="carte carte-entrees">
@@ -47,7 +47,7 @@
                     <ul class="commande__ul">
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Tartare de thon</h3>
-                            <p class="text text--commande">Assaisonné au yuzu</p>  
+                            <div class="text text--commande commande__li__detail">Assaisonné au yuzu</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">25€</div>
                             </div>
@@ -60,9 +60,8 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Bouchée de homard croustillant</h3>
-                            <p class="text text--commande">Et sa farandole de petits légumes</p>  
+                            <div class="text text--commande commande__li__detail">Et sa farandole de petits légumes</div>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
@@ -74,7 +73,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Velouté de cèpes</h3>
-                            <p class="text text--commande">Aux truffes</p>  
+                            <div class="text text--commande commande__li__detail">Aux truffes</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">20€</div>
                             </div>
@@ -93,7 +92,7 @@
                     <ul class="commande__ul">
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Poulet rôti aux herbes de <br>Provence</h3>
-                            <p class="text text--commande">Et sa crème de truffe</p>  
+                            <div class="text text--commande commande__li__detail">Et sa crème de truffe</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price commande__li__center__price__provence">40€</div>
                             </div>
@@ -106,7 +105,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Langouste rôtie</h3>
-                            <p class="text text--commande">Et ses légumes de saison</p>  
+                            <div class="text text--commande commande__li__detail">Et ses légumes de saison</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
@@ -119,7 +118,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Côte de boeuf Angus </h3>
-                            <p class="text text--commande">Et sa purée de panais</p>  
+                            <div class="text text--commande commande__li__detail">Et sa purée de panais</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">44€</div>
                             </div>
@@ -138,7 +137,7 @@
                     <ul class="commande__ul">
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Farandole de desserts</h3>
-                            <p class="text text--commande">Du chef</p>  
+                            <div class="text text--commande commande__li__detail">Du chef</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">18€</div>
                             </div>
@@ -151,7 +150,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Crème brulée</h3>
-                            <p class="text text--commande">Revisitée</p>  
+                            <div class="text text--commande commande__li__detail">Revisitée</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">22€</div>
                             </div>
@@ -164,7 +163,7 @@
 
                         <li class="commande__li li">
                             <h3 class="heading heading--h3 heading--h3--commande">Tiramisu</h3>
-                            <p class="text text--commande">À la noisette</p>  
+                            <div class="text text--commande commande__li__detail">À la noisette</div>  
                             <div class="commande__li__center">
                                 <div class="text text--commande text--commande--bold commande__li__center__price">23€</div>
                             </div>
