--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-<!-- HEADER -->
+    <!-- HEADER -->
 
     <header class="header">
         <div class="header__logo">
@@ -35,6 +35,17 @@
 <!-- SECTION MAIN -->
 
     <main class="main--accueil">
+
+<!-- SECTION LOADER-->
+
+        <div class="loader">
+            <div class="loader__progress">
+                <div class="loader__progress__barre">
+                    
+                </div>
+            </div>
+
+        </div>
 
 <!-- SECTION MAIN/EXPLO-->
         <div class="background"></div>
