test animation coeur

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -39,8 +39,8 @@
 <!-- SECTION MAIN--PALETTE/ COMMANDE-->         
         <section class="commande">
             <h1 class="heading heading--h1 heading--h1--commande">La palette du goût</h1>
-            <div class="commande__divico"><img src="Font_awesome/heart.svg" alt="Icone de like du restaurant La palette du goût sur Ohmyfood" class="commande__divico__ico"></div>
-
+            <i class="fas fa-heart fa-heart--full"></i>
+            <i class="far fa-heart"></i>
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->             
                 <div class="carte carte-entrees">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Entrées</h2></div>
