--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -39,7 +39,10 @@
 <!-- SECTION MAIN--PALETTE/ COMMANDE--> 
         <section class="commande">
             <h1 class="heading heading--h1 heading--h1--commande">La note enchantée</h1>
-            <div class="commande__divico"><img src="Font_awesome/heart.svg" alt="Icone de like du restaurant La note enchantée sur Ohmyfood" class="commande__divico__ico"></div>
+            <div class="commande__divico">
+                <i class="far fa-heart heart-index"></i>
+                <i class="fas fa-heart heart-index-full"></i>
+            </div>
 
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE--> 
                 <div class="carte carte-entrees">
