--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -39,8 +39,11 @@
 <!-- SECTION MAIN--PALETTE/ COMMANDE-->         
         <section class="commande">
             <h1 class="heading heading--h1 heading--h1--commande">La palette du goût</h1>
-            <i class="fas fa-heart fa-heart--full"></i>
-            <i class="far fa-heart"></i>
+            <div class="commande__divico">
+                <i class="far fa-heart heart-index"></i>
+                <i class="fas fa-heart heart-index-full"></i>
+            </div>
+
         <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->             
                 <div class="carte carte-entrees">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Entrées</h2></div>
