--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
                         <div class="resto__a__bottom">
                                 <h3 class="heading heading--h3">La palette du goût</h3>
                                 <p class="text text--resto">Ménilmontant</p>
-                                <div class="resto__a__divico"><img src="Font_awesome/heart.svg" alt="Icone de like du restaurant La Palette du goût sur Ohmyfood" class="commande__divico__ico"></div>
+                                <div class="resto__a__bottom__heart">
+                                    <i class="far fa-heart heart-index"></i>
+                                    <i class="fas fa-heart heart-index-full"></i>
+                                </div> 
                         </div>
                     </a>    
                 </li>
@@ -96,7 +99,10 @@
                         <div class="resto__a__bottom">
                                 <h3 class="heading heading--h3">La note enchantée</h3>
                                 <p class="text text--resto">Charonne</p>
-                                <div class="resto__a__divico"><img src="Font_awesome/heart.svg" alt="Icone de like du restaurant La note enchantée sur Ohmyfood" class="commande__divico__ico"></div>
+                                <div class="resto__a__bottom__heart">
+                                    <i class="far fa-heart heart-index"></i>
+                                    <i class="fas fa-heart heart-index-full"></i>
+                                </div> 
                         </div>
                     </a>    
                 </li>
@@ -107,7 +113,10 @@
                         <div class="resto__a__bottom">
                                 <h3 class="heading heading--h3">À la française</h3>
                                 <p class="text text--resto">Cité rouge</p>
-                                <div class="resto__a__divico"><img src="Font_awesome/heart.svg" alt="Icone de like du restaurant A la française sur Ohmyfood" class="commande__divico__ico"></div>
+                                <div class="resto__a__bottom__heart">
+                                    <i class="far fa-heart heart-index"></i>
+                                    <i class="fas fa-heart heart-index-full"></i>
+                                </div> 
                         </div>
                     </a>   
                 </li>
@@ -118,7 +127,10 @@
                         <div class="resto__a__bottom">
                                 <h3 class="heading heading--h3">Le délice des sens</h3>
                                 <p class="text text--resto">Folie-Méricourt</p>
-                                <div class="resto__a__divico"><img src="Font_awesome/heart.svg" alt="Icone de like du restaurant Le délice des sens sur Ohmyfood" class="commande__divico__ico"></div>
+                                <div class="resto__a__bottom__heart">
+                                    <i class="far fa-heart heart-index"></i>
+                                    <i class="fas fa-heart heart-index-full"></i>
+                                </div> 
                         </div>
                     </a>  
                 </li>    
