Mise à jour avec animations
Animations loader et coeur

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
 <!-- SECTION MAIN -->
 
     <main class="main--accueil">
+ 
+<!-- SECTION LOADER-->
+
+<div class="loader">
+    <div class="loader__progress">
+        <div class="loader__progress__barre">
+            
+        </div>
+    </div>
+
+</div>
 
 <!-- SECTION MAIN/EXPLO-->
         <div class="background"></div>
