--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header class="header">
         <div class="header__logo">
-            <a class="header__logo__a" href="accueil.html">
+            <a class="header__logo__a" href="index.html">
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
                 <div class="local">
                     <div>
@@ -39,9 +39,11 @@
 <!-- SECTION LOADER-->
 
 <div class="loader">
+    <div class="loader__logo">
+        <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="loader__logo__img"/>
+    </div>
     <div class="loader__progress">
-        <div class="loader__progress__barre">
-            
+        <div class="loader__progress__barre">  
         </div>
     </div>
 
