Résolution coeur svg

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                                 <h3 class="heading heading--h3">La palette du goût</h3>
                                 <p class="text text--resto">Ménilmontant</p>
                                 <div class="resto__a__bottom__heart">
-                                    <i class="far fa-heart heart-index"></i>
-                                    <i class="fas fa-heart heart-index-full"></i>
+                                    <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
+                                    <img class="heart--full" src="/Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
                                 </div> 
                         </div>
                     </a>    
@@ -113,8 +113,8 @@
                                 <h3 class="heading heading--h3">La note enchantée</h3>
                                 <p class="text text--resto">Charonne</p>
                                 <div class="resto__a__bottom__heart">
-                                    <i class="far fa-heart heart-index"></i>
-                                    <i class="fas fa-heart heart-index-full"></i>
+                                    <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
+                                    <img class="heart--full" src="/Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
                                 </div> 
                         </div>
                     </a>    
@@ -127,8 +127,8 @@
                                 <h3 class="heading heading--h3">À la française</h3>
                                 <p class="text text--resto">Cité rouge</p>
                                 <div class="resto__a__bottom__heart">
-                                    <i class="far fa-heart heart-index"></i>
-                                    <i class="fas fa-heart heart-index-full"></i>
+                                    <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
+                                    <img class="heart--full" src="/Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
                                 </div> 
                         </div>
                     </a>   
@@ -141,8 +141,8 @@
                                 <h3 class="heading heading--h3">Le délice des sens</h3>
                                 <p class="text text--resto">Folie-Méricourt</p>
                                 <div class="resto__a__bottom__heart">
-                                    <i class="far fa-heart heart-index"></i>
-                                    <i class="fas fa-heart heart-index-full"></i>
+                                    <img class="heart--wide" src="/Font_awesome/heart_wide.svg" alt="Icone de like du menu Ohmyfood">
+                                    <img class="heart--full" src="/Font_awesome/heart_full.svg" alt="Icone de like du menu Ohmyfood">
                                 </div> 
                         </div>
                     </a>  
