Réglages images de pages menu en version mobile

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -33,7 +33,7 @@
 
  <!-- SECTION MAIN--PALETTE/ PLATPHOTO-->           
         <section class="platphoto">
-            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Plat sur assiette du restaurant A la française pour commande repas Ohmyfood" class="platphoto__img">
+            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash_light.jpg" alt="Plat sur assiette du restaurant A la française pour commande repas Ohmyfood" class="platphoto__img platphoto__img--palette--francaise">
         </section>
 
 <!-- SECTION MAIN--PALETTE/ COMMANDE-->       
