--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -33,7 +33,7 @@
 
  <!-- SECTION MAIN--PALETTE/ PLATPHOTO-->  
         <section class="platphoto">
-            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat sur assiette du restaurant La palette du goût pour commande repas Ohmyfood" class="platphoto__img">
+            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat sur assiette du restaurant La palette du goût pour commande repas Ohmyfood" class="platphoto__img platphoto__img--palette ">
         </section>
 
 <!-- SECTION MAIN--PALETTE/ COMMANDE-->         
