--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -33,7 +33,7 @@
 
 <!-- SECTION MAIN--PALETTE/ PLATPHOTO-->         
         <section class="platphoto">
-            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat sur assiette du restaurant Le délice des sens pour commande repas Ohmyfood" class="platphoto__img">
+            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat sur assiette du restaurant Le délice des sens pour commande repas Ohmyfood" class="platphoto__img platphoto__img--delice">
         </section>
 
 <!-- SECTION MAIN--PALETTE/ COMMANDE-->         
